# mafiabot

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Mafia o'yin qoidalari.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/auth/: jwt_helpers.py
backend/app/api/routers/: admin.py  auth.py  group.py  health.py  public.py  sandbox.py  super_admin.py  webhook.py  ws.py
backend/app/bot/: dispatcher.py  states.py
backend/app/bot/filters/: __init__.py  group_admin.py  super_admin.py
backend/app/bot/handlers/common/: help.py
backend/app/bot/handlers/group/: atmosphere.py  game.py  giveaway.py  onboarding.py  settings.py  stats.py  voting.py
backend/app/bot/handlers/private/: group_settings.py  inventory.py  last_words.py  mafia_chat.py  menu.py  payment.py  role_actions.py  special_actions.py  start.py  super_admin.py
backend/app/bot/handlers/shared/: registration.py  stale_dm.py
backend/app/bot/keyboards/: private.py
backend/app/bot/middlewares/: command_cleanup.py  i18n.py  throttling.py  user_loader.py
backend/app/core/: actions.py  distribution.py  redis_state.py  sandbox_ids.py  state.py  win_conditions.py
backend/app/core/phases/: manager.py
backend/app/core/roles/: __init__.py  arsonist.py  base.py  citizen.py  crook.py  detective.py  doctor.py  don.py  hobo.py  hooker.py  journalist.py  kamikaze.py  killer.py  lawyer.py  lucky.py  mafia.py  mage.py  maniac.py  mayor.py  sergeant.py  snitch.py  suicide.py  werewolf.py
backend/app/db/: tortoise_config.py
backend/app/db/models/: __init__.py  audit.py  broadcast.py  emoji_config.py  game.py  group.py  role_config.py  sandbox.py  statistics.py  system_settings.py  transaction.py  user.py
backend/app/locales/en/: main.ftl
backend/app/locales/ru/: main.ftl
backend/app/locales/uz/: main.ftl
backend/app/services/: achievement_service.py  afk_service.py  alive_summary.py  audit_service.py  broadcast_service.py  elo_service.py  emoji_config_service.py  exchange_service.py  game_end_dm.py  game_service.py  game_start_announce.py  giveaway_service.py  group_settings_helper.py  i18n_service.py  last_words.py  mafia_chat.py  message_templates.py  messaging.py  payment_service.py  pricing_service.py  recording_bot.py  role_actions.py  role_config_service.py  role_feedback.py  sa_notifications.py  safe_messaging.py  sandbox_service.py  stats_service.py  transcript_store.py  ws_broker.py
backend/app/utils/: webapp_auth.py
backend/app/workers/: scheduler.py  stats_rollup.py
backend/migrations/models/: 0_20260510103654_init.py  1_20260510111436_add_atmosphere_media.py  2_20260510143000_add_system_settings.py  3_20260519120000_add_role_configs.py  4_20260519130000_add_emoji_configs.py  5_20260519140000_achievement_dollars_reward.py  6_20260520120000_group_premium.py  7_20260526120000_add_sandbox.py  8_20260530120000_add_broadcast_and_user_active.py  9_20260530210000_diamond_packages_setting.py
backend/tests/: conftest.py
backend/tests/integration/: test_all_roles_complete.py  test_sandbox_lifecycle.py
backend/tests/unit/: test_api_endpoints.py  test_bug_fixes.py  test_distribution.py  test_elo.py  test_emoji_config_service.py  test_group_api.py  test_i18n_service.py  test_phase_manager.py  test_recording_bot.py  test_reference_parity.py  test_role_config_service.py  test_sandbox_auto_play.py  test_sandbox_ids.py  test_sandbox_inject_callback.py  test_sandbox_service.py  test_sandbox_stats_guards.py  test_state.py  test_transcript_store.py  test_user_loader_sandbox.py  test_win_conditions.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/modules/admin/: AdminApp.tsx
frontend/src/test/: setup.ts
nginx/: README.md  mafia.omadli.uz.conf
scripts/: backup.sh  build-frontend.sh  generate_atmosphere_gifs.py  generate_bot_avatar.py  generate_custom_emojis.py  run-dev.ps1  run-dev.sh  setup_bot_profile.py  upload_emoji_pack.py
(+122 files in other folders)
