[project]
name = "mafia-bot"
version = "0.1.0"
description = "Mafia Telegram Bot - @MafGameUzBot"
requires-python = ">=3.12"
dependencies = ["aiogram>=3.13.0", "redis>=5.1.0", "fastapi>=0.115.0", "uvicorn[standard]>=0.31.0", "websockets>=13.1", "tortoise-orm[asyncpg]>=0.21.6", "aiosqlite>=0.20.0", "aerich>=0.7.2", "pydantic>=2.9.0", "pydantic-settings>=2.5.0", "fluent.runtime>=0.4.0", "loguru>=0.7.2", "sentry-sdk[fastapi]>=2.15.0", "apscheduler>=3.10.4", "passlib[bcrypt]>=1.7.4", "pyjwt>=2.9.0", "python-multipart>=0.0.12", "httpx>=0.27.0", "orjson>=3.10.7"]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0", "ruff>=0.6.9", "mypy>=1.11.2", "pre-commit>=3.8.0", "types-redis>=4.6.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[tool.aerich]
tortoise_orm = "app.db.tortoise_config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF", "ASYNC"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]
"app/db/models/*.py" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = false
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --strict-markers"
